# VoxTerm-lab

./: .gitignore  CLAUDE.md  LAB-JOURNAL.md  META-AGENT.md  Makefile  README.md  leaderboard.json  pyproject.toml  setup.sh
eval/: __init__.py  data.py  der.py  diarization_data.py  meta.py  report.py  run_diarization_eval.py  run_eval.py  run_voxconverse_eval.py  voxconverse_data.py  wer.py
eval-data/: meeting_2spk_hyp.rttm  meeting_2spk_ref.rttm  overlap_3spk_hyp.rttm  overlap_3spk_ref.rttm
research/: hypotheses.json
scripts/: optimize-loop.sh
tests_eval/: test_rttm.py  test_scorer.py
tests_eval/fixtures/: overlap_hyp_one_speaker.rttm  overlap_ref.rttm  simple_2spk_hyp_perfect.rttm  simple_2spk_ref.rttm
voxterm_eval/: __init__.py  cli.py  rttm.py  scorer.py
